Project

General

Profile

Actions

Bug #57063

closed

Incorrect resumption from Full to Incremental Sync in RGWDataSyncShardCR

Added by Adam Emerson over 1 year ago. Updated over 1 year ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Community (dev)
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Because the `switch` statement is outside a resume block, if Full sync yields after the switch to incremental, the remaining code in `full_sync()` is never executed.

Actions #1

Updated by Casey Bodley over 1 year ago

  • Status changed from Fix Under Review to Resolved
  • Backport deleted (quincy, pacific)
Actions

Also available in: Atom PDF